--- a/libco/实验记录.md
+++ b/libco/实验记录.md
@@ -110,7 +110,7 @@ static CoNode *co_node_remove() {
 
 根据前面的分析，由于选中的协程包含有`CO_NEW`和`CO_RUNNING`两种情况:
 
-1. 选中的协程为`CO_RUNNING`，则选中的协程必然是执行过`co_yield`函数，保存了其上下文后被释放了CPU的协程。因此我们只需要调用`longjmp`函数，即立马恢复到选中的协程保存的上下文中。这里需要特别说明的是，当时保存的协程的上下文，其正在执行`co_yield`，也就是恢复上下文后，其下一条命令就是`setjmp`语句的紧接着的下一条，这也就是我们需要判断`setjmp`返回值的原因——根据返回值，判断当前执行的协程是刚保存完的协程;还是被选中后接着跳转过来的协程。这里有点类似于`fork`函数，需要特别注意以下
+1. 选中的协程为`CO_RUNNING`，则选中的协程必然是执行过`co_yield`函数，保存了其上下文后被释放了CPU的协程。因此我们只需要**调用`longjmp`函数，即立马「恢复」到选中的协程保存的上下文中**。这里需要特别说明的是，当时保存的协程的上下文，其正在执行`co_yield`，也就是恢复上下文后，其下一条命令就是`setjmp`语句的紧接着的下一条，这也就是我们需要判断`setjmp`返回值的原因——根据返回值，判断当前执行的协程是刚保存完的协程;还是被选中后接着跳转过来的协程。这里有点类似于`fork`函数，需要特别注意以下
 
 2. 选中的协程为`CO_NEW`，则此时协程中的栈是空的，则此时不能像上面一样，直接跳转——因为其栈是空的，则并没有保存协程的上下文，自然是错误的。因此这里我们运行函数就行，也就是伪造好参数传递，然后直接`call`给定的函数即可。当然，`call`的话，其最终仍然会返回并继续执行下面的命令(如果函数是有限执行的话)。当协程执行完后，下面将其状态更改为`CO_DEAD`即可，并修改等待其结束的协程的状态，然后再次调用`co_yield`即可，切换到其他协程上，之后再也不会被选中执行，并等待`co_wait`释放相关资源即可。
 
