--- a/libco/实验记录.md
+++ b/libco/实验记录.md
@@ -159,10 +159,11 @@ static inline void restore_return() {
 
 #define __LONG_JUMP_STATUS (1)
 void co_yield () {
-  int status = setjmp(current->context);
+  int status = setjmp(current->context); // 第一次 setjmp 返回 0，之后由 longjmp 恢复的 setjmp 返回 1
   if (!status) {
     //此时开始查找待选中的进程，因为co_node应该指向的就是current对应的节点，因此首先向下移动一个，使当前线程优先级最低
     co_node = co_node->bk;
+    // 如果查到一个协程的状态是 CO_NEW 或 CO_RUNNING，就跳出循环
     while (!((current = co_node->coroutine)->status == CO_NEW || current->status == CO_RUNNING)) {
       co_node = co_node->bk;
     }
@@ -171,7 +172,7 @@ void co_yield () {
 
     if (current->status == CO_RUNNING) {
       longjmp(current->context, __LONG_JUMP_STATUS);
-    } else {
+    } else { // 状态为 CO_NEW
       ((struct co volatile *)current)->status = CO_RUNNING;  //这里如果直接赋值，编译器会和后面的覆写进行优化
 
       // 栈由高地址向低地址生长
@@ -185,7 +186,7 @@ void co_yield () {
       if (current->waiter) {
         current->waiter->status = CO_RUNNING;
       }
-      co_yield ();
+      co_yield();
     }
   }
 
