--- a/libco/实验记录.md
+++ b/libco/实验记录.md
@@ -161,26 +161,27 @@ static inline void restore_return() {
 void co_yield () {
   int status = setjmp(current->context); // 第一次 setjmp 返回 0，之后由 longjmp 恢复的 setjmp 返回 1
   if (!status) {
-    //此时开始查找待选中的进程，因为co_node应该指向的就是current对应的节点，因此首先向下移动一个，使当前线程优先级最低
+    // 此时开始查找待选中的进程，因为co_node应该指向的就是current对应的节点，因此首先向下移动一个，使当前线程优先级最低
     co_node = co_node->bk;
     // 如果查到一个协程的状态是 CO_NEW 或 CO_RUNNING，就跳出循环
     while (!((current = co_node->coroutine)->status == CO_NEW || current->status == CO_RUNNING)) {
       co_node = co_node->bk;
     }
-
+	// 此时 current 指向的是协程，要么是刚创建的，要么是已经运行的
     assert(current);
-
+	
+    // 如果当前协程已经运行，那么就恢复这个协程，把它调度起来继续运行
     if (current->status == CO_RUNNING) {
       longjmp(current->context, __LONG_JUMP_STATUS);
-    } else { // 状态为 CO_NEW
-      ((struct co volatile *)current)->status = CO_RUNNING;  //这里如果直接赋值，编译器会和后面的覆写进行优化
+    } else { // 如果当前协程新创建（CO_NEW）
+      ((struct co volatile *)current)->status = CO_RUNNING;  // 这里如果直接赋值，编译器会和后面的覆写进行优化
 
       // 栈由高地址向低地址生长
       stack_switch_call(current->stack + STACK_SIZE, current->func, current->arg);
-      //恢复相关寄存器
+      // 恢复相关寄存器
       restore_return();
 
-      //此时协程已经完成执行
+      // 此时协程已经完成执行
       current->status = CO_DEAD;
 
       if (current->waiter) {
