M3: 系统调用 Profiler (sperf)

--- a/libco/实验记录.md
+++ b/libco/实验记录.md
@@ -116,7 +116,7 @@ static CoNode *co_node_remove() {
 
     选中的协程为`CO_NEW`下，其整体流程如下所示
 
-![](./images/1.png)
+![](../images/1.png)
 
 这里有几点需要注意的问题:
 
