--- a/sperf/实验记录.md
+++ b/sperf/实验记录.md
@@ -236,7 +236,7 @@ C library/kernel differences
 
 ~~实际上在man中可以直接找到输出系统调用及其时间百分比的参数，即`strace -cU time-percent`, 但是有点作弊~~
 
-### spert:设计
+### sperf:设计
 
 类似于前面的M1实验——其将**pstree**分解成多个更简单的子部分进行解决;这里也将**sperf**分解成几个更为简单的部件进行解决。
 
@@ -432,7 +432,7 @@ void regfree(regex_t *preg);
 
 2. 即使解决了上面的问题(例如将程序的 **stderr** 重定向到 **/dev/null** 丢弃)，程序输出的字符串同样可能对解析产生麻烦，如下所示
 
-    ```bash
+```bash
 $ strace -T echo -n '", 1) = 100 <99999.9>' > /dev/null
     ioctl(1, TCGETS, 0x7fff80723570)        = -1 ENOTTY <0.000100>
 write(1, "\", 1) = 100 <99999.9>", 21)  = 21 <0.000149>
@@ -641,10 +641,8 @@ void parent(void) {
 	char buf[MAX_STRACE_OUTPUT_SIZE + 1] = {0};
 	int read_result = 0, buf_available = 0;
 
-
 	//关闭无用的写管道文件描述符
 	close(pipefd[1]);
-
 
 	//设置读管道文件描述符为非阻塞模式
 	if(fcntl(pipefd[0], F_SETFD, fcntl(pipefd[0], F_GETFD) | O_NONBLOCK) == -1) {
@@ -652,14 +650,10 @@ void parent(void) {
 		exit(EXIT_FAILURE);
 	}
 
-
 	//初始化解析字符串中正则匹配相关模式
-	parse_strace_output_init();
-	
-	
+	parse_strace_output_init();	
 
 	while(1) {
-
 		//可能子进程确实没有输出，或子进程终止，需要辨别这两种情况
 		switch(read_result = read(pipefd[0], buf + buf_available, MAX_STRACE_OUTPUT_SIZE - buf_available)) {
 			//子进程当前没有输出，但未终止
@@ -674,7 +668,6 @@ void parent(void) {
 				buf[buf_available + read_result] = 0;
 				buf_available = parse_strace_output(buf, buf_available + read_result);
 		}
-
 
 		// 节省资源，休眠TIME_INTERVAL_SECONDS秒
 		sleep(TIME_INTERVAL_SECONDS);
